<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Telynet</string>
    <string name="menu_about">About</string>
    <string name="txtLabelClient">Clients</string>
    <string name="menu_addclient">Add Client</string>
    <string name="title_activity_new_client">New Client</string>
    <string name="txtCode">Code</string>
    <string name="txtName">Name</string>
    <string name="txtTelf">Telephone</string>
    <string name="txtEmail">Email</string>
    <string name="txtStatus">Visited</string>
    <string name="btnSave">Save</string>
    <string name="menu_phonecall">Phone Call</string>
    <string name="menu_fvisited">Filter Visited</string>
    <string name="menu_fnvisited">Filter Not Visited</string> 
    <string name="menu_ocode">Order by Code</string>
    <string name="menu_oname">Order by Name</string>
    <string name="menu_reset">Reset</string>
    

</resources>
