<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cu.slam.telynet.NewClient" >

    	<Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btnSave" 
        android:textColor="#fff"/>

    	<TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"        
        android:text="@string/txtCode" />
	
		<EditText
    	android:id="@+id/textEdit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/textView1"
        android:hint="@string/txtCode" 
        android:inputType="text" 
        android:textColor="#fff"/>
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textEdit1"
        android:text="@string/txtName" />
	
		<EditText
    	android:id="@+id/textEdit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView2"
        android:hint="@string/txtName" 
        android:inputType="text"
        android:textColor="#fff"/>
    
    	<TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textEdit2"
        android:text="@string/txtTelf" />
		<EditText
    	android:id="@+id/textEdit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView3"
        android:hint="@string/txtTelf" 
		android:inputType="text"
		android:textColor="#fff"/>
        <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textEdit3"
        android:text="@string/txtEmail" />
    
    	<EditText
    	android:id="@+id/textEdit4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView4"
        android:hint="@string/txtEmail" 
        android:inputType="text"
        android:textColor="#fff"/>


    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSave"
        android:layout_alignLeft="@+id/btnSave"
        android:layout_alignRight="@+id/btnSave"
        android:text="@string/txtStatus"
        android:layout_below="@+id/textEdit4"
        tools:ignore="NewApi"
        android:textColor="#fff" />


</RelativeLayout>